--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
 		import PeopleContainer from "./js/containers/people.container.js";
     import StoriesContainer from "./js/containers/stories-container.js"
 		import TopicsContainer from "./js/containers/topics.container.js";
+    import FormContainer from "./js/containers/form.container.js"
 
 
     customElements.define('app-home', AppHome);
@@ -42,6 +43,7 @@
 		customElements.define('people-container', PeopleContainer);
     customElements.define('stories-container', StoriesContainer);
 		customElements.define('topics-container', TopicsContainer);
+    customElements.define('form-container', FormContainer);
   </script>
 </head>
 
