--- a/home.html
+++ b/home.html
@@ -28,7 +28,8 @@
 		import PeopleContainer from "./js/containers/people.container.js";
     import StoriesContainer from "./js/containers/stories-container.js"
 		import TopicsContainer from "./js/containers/topics.container.js";
-    import FormContainer from "./js/containers/form.container.js"
+    import FormContainer from "./js/containers/form.container.js";
+    import AddContainer from "./js/containers/add.container.js";
 
 
     customElements.define('app-home', AppHome);
@@ -44,6 +45,7 @@
     customElements.define('stories-container', StoriesContainer);
 		customElements.define('topics-container', TopicsContainer);
     customElements.define('form-container', FormContainer);
+    customElements.define('add-container', AddContainer);
   </script>
 </head>
 
