--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
         <path d="M48.33,45.6H18a14.17,14.17,0,0,1,0-28.34H78.86a17.37,17.37,0,0,1,0,34.74H42.33l-21-21.26L47.75,4" />
       </symbol>
     </svg>
-    <h2 class="site-name">availQ</h2>
+    <h2 class="site-name">avalQ</h2>
     <ul class="left">
       <div class="account">
         <a href="" class="login">Login</a>
@@ -98,7 +98,9 @@
         <span class="link-item">
           <span class="text">All</span>
           <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z" fill="currentColor"></path>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z"
+              fill="currentColor"></path>
           </svg>
         </span>
         <div class="drop-down">
@@ -130,10 +132,18 @@
             <li class="item bulk">
               <a href="" class="link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M8.15552 15.45C8.15552 15.0357 8.4913 14.7 8.90552 14.7H14.3055C14.7197 14.7 15.0555 15.0357 15.0555 15.45C15.0555 15.8642 14.7197 16.2 14.3055 16.2H8.90552C8.4913 16.2 8.15552 15.8642 8.15552 15.45Z" fill="currentColor" />
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M8.15454 11.4386C8.15454 11.0244 8.49033 10.6886 8.90454 10.6886H12.2605C12.6748 10.6886 13.0105 11.0244 13.0105 11.4386C13.0105 11.8528 12.6748 12.1886 12.2605 12.1886H8.90454C8.49033 12.1886 8.15454 11.8528 8.15454 11.4386Z" fill="currentColor" />
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M4.93052 4.27249C6.46237 2.58293 8.83824 2 12.0399 2C12.9666 2 13.8214 2.05142 14.5917 2.15694C14.7477 2.17832 14.8931 2.24827 15.0071 2.3569L20.6771 7.7569C20.7923 7.86656 20.8696 8.00998 20.8979 8.16645C21.0983 9.27377 21.1899 10.5511 21.1899 12C21.1899 15.4998 20.6712 18.0653 19.1576 19.7318C17.6242 21.42 15.2455 22 12.0399 22C8.83897 22 6.46283 21.4199 4.93074 19.7315C3.41862 18.0651 2.8999 15.4999 2.8999 12C2.8999 8.5048 3.41874 5.93992 4.93052 4.27249ZM6.04178 5.28001C4.93107 6.50508 4.3999 8.5652 4.3999 12C4.3999 15.4401 4.93118 17.4999 6.04156 18.7235C7.13197 19.9251 8.95083 20.5 12.0399 20.5C15.1343 20.5 16.9557 19.925 18.0472 18.7232C19.1586 17.4997 19.6899 15.4402 19.6899 12C19.6899 10.7185 19.6149 9.61383 19.4626 8.67165L14.1509 3.61282C13.52 3.53823 12.8146 3.5 12.0399 3.5C8.95156 3.5 7.13244 4.07707 6.04178 5.28001Z" fill="currentColor" />
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M13.9343 2.08264C14.3485 2.08264 14.6843 2.41843 14.6843 2.83264V5.49364C14.6843 6.93714 15.8542 8.10664 17.2983 8.10664H20.2493C20.6635 8.10664 20.9993 8.44243 20.9993 8.85664C20.9993 9.27086 20.6635 9.60664 20.2493 9.60664H17.2983C15.0264 9.60664 13.1843 7.76615 13.1843 5.49364V2.83264C13.1843 2.41843 13.5201 2.08264 13.9343 2.08264Z" fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M8.15552 15.45C8.15552 15.0357 8.4913 14.7 8.90552 14.7H14.3055C14.7197 14.7 15.0555 15.0357 15.0555 15.45C15.0555 15.8642 14.7197 16.2 14.3055 16.2H8.90552C8.4913 16.2 8.15552 15.8642 8.15552 15.45Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M8.15454 11.4386C8.15454 11.0244 8.49033 10.6886 8.90454 10.6886H12.2605C12.6748 10.6886 13.0105 11.0244 13.0105 11.4386C13.0105 11.8528 12.6748 12.1886 12.2605 12.1886H8.90454C8.49033 12.1886 8.15454 11.8528 8.15454 11.4386Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M4.93052 4.27249C6.46237 2.58293 8.83824 2 12.0399 2C12.9666 2 13.8214 2.05142 14.5917 2.15694C14.7477 2.17832 14.8931 2.24827 15.0071 2.3569L20.6771 7.7569C20.7923 7.86656 20.8696 8.00998 20.8979 8.16645C21.0983 9.27377 21.1899 10.5511 21.1899 12C21.1899 15.4998 20.6712 18.0653 19.1576 19.7318C17.6242 21.42 15.2455 22 12.0399 22C8.83897 22 6.46283 21.4199 4.93074 19.7315C3.41862 18.0651 2.8999 15.4999 2.8999 12C2.8999 8.5048 3.41874 5.93992 4.93052 4.27249ZM6.04178 5.28001C4.93107 6.50508 4.3999 8.5652 4.3999 12C4.3999 15.4401 4.93118 17.4999 6.04156 18.7235C7.13197 19.9251 8.95083 20.5 12.0399 20.5C15.1343 20.5 16.9557 19.925 18.0472 18.7232C19.1586 17.4997 19.6899 15.4402 19.6899 12C19.6899 10.7185 19.6149 9.61383 19.4626 8.67165L14.1509 3.61282C13.52 3.53823 12.8146 3.5 12.0399 3.5C8.95156 3.5 7.13244 4.07707 6.04178 5.28001Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M13.9343 2.08264C14.3485 2.08264 14.6843 2.41843 14.6843 2.83264V5.49364C14.6843 6.93714 15.8542 8.10664 17.2983 8.10664H20.2493C20.6635 8.10664 20.9993 8.44243 20.9993 8.85664C20.9993 9.27086 20.6635 9.60664 20.2493 9.60664H17.2983C15.0264 9.60664 13.1843 7.76615 13.1843 5.49364V2.83264C13.1843 2.41843 13.5201 2.08264 13.9343 2.08264Z"
+                    fill="currentColor" />
                 </svg>
                 <span class="content">
                   <h5 class="name">Journals</h5>
@@ -242,7 +252,8 @@
             <li class="item icon">
               <a href="" class="link">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 576 512">
-                  <path d="M352 120c0-13.3 10.7-24 24-24H552c13.3 0 24 10.7 24 24V296c0 13.3-10.7 24-24 24s-24-10.7-24-24V177.9L337 369c-9.4 9.4-24.6 9.4-33.9 0l-111-111L41 409c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9L175 207c9.4-9.4 24.6-9.4 33.9 0l111 111L494.1 144H376c-13.3 0-24-10.7-24-24z" />
+                  <path
+                    d="M352 120c0-13.3 10.7-24 24-24H552c13.3 0 24 10.7 24 24V296c0 13.3-10.7 24-24 24s-24-10.7-24-24V177.9L337 369c-9.4 9.4-24.6 9.4-33.9 0l-111-111L41 409c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9L175 207c9.4-9.4 24.6-9.4 33.9 0l111 111L494.1 144H376c-13.3 0-24-10.7-24-24z" />
                 </svg>
                 <span class="content">
                   <h5 class="name">Popular</h5>
@@ -328,7 +339,9 @@
         <span class="link-item">
           <span class="text">Resources</span>
           <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z" fill="currentColor"></path>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z"
+              fill="currentColor"></path>
           </svg>
         </span>
         <div class="drop-down">
@@ -337,8 +350,8 @@
             <h4 class="title">Tools</h4>
             <li class="item icon">
               <a href="" class="link">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash"
-                  viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-code-slash" viewBox="0 0 16 16">
                   <path
                     d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0" />
                 </svg>
@@ -394,8 +407,8 @@
             <h4 class="title">Company</h4>
             <li class="item icon">
               <a href="" class="link icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-paper"
-                  viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-envelope-paper" viewBox="0 0 16 16">
                   <path
                     d="M4 0a2 2 0 0 0-2 2v1.133l-.941.502A2 2 0 0 0 0 5.4V14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V5.4a2 2 0 0 0-1.059-1.765L14 3.133V2a2 2 0 0 0-2-2zm10 4.267.47.25A1 1 0 0 1 15 5.4v.817l-1 .6zm-1 3.15-3.75 2.25L8 8.917l-1.25.75L3 7.417V2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1zm-11-.6-1-.6V5.4a1 1 0 0 1 .53-.882L2 4.267zm13 .566v5.734l-4.778-2.867zm-.035 6.88A1 1 0 0 1 14 15H2a1 1 0 0 1-.965-.738L8 10.083zM1 13.116V7.383l4.778 2.867L1 13.117Z" />
                 </svg>
@@ -440,7 +453,7 @@
         </a>
       </li>
     </ul>
-
+  
     <ul class="right">
       <li class="link icon search">
         <a href="" class="link-item">
@@ -475,7 +488,7 @@
 
   <app-home url="app/home"></app-home>
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <section class="newsletter">
       <div class="title">Join Our Newsletter</div>
       <div class="text">
@@ -523,7 +536,7 @@
         <a href="#" id="copyright">2024 aduki,Inc</a>
       </div>
     </div>
-  </footer>
+  </footer> -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const stickyPositions = document.querySelectorAll('#sticky-position');
