--- a/home.html
+++ b/home.html
@@ -465,7 +465,7 @@
           </svg>
         </a>
       </li>
-      <li class="link icon theme">
+      <!-- <li class="link icon theme">
         <span title="Toggle theme" class="options light">
           <span class="status"></span>
           <span class="option light-icon">
@@ -482,7 +482,7 @@
             </svg>
           </span>
         </span>
-      </li>
+      </li> -->
     </ul>
   </header>
 
