--- a/post.html
+++ b/post.html
@@ -584,6 +584,7 @@
             </span>
           </span>
         </div>
+        <form-container type="post"></form-container>
       </div>
     </div>
     <div class="side">
