--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
         <path d="M48.33,45.6H18a14.17,14.17,0,0,1,0-28.34H78.86a17.37,17.37,0,0,1,0,34.74H42.33l-21-21.26L47.75,4" />
       </symbol>
     </svg>
-    <h2 class="site-name">avalQ</h2>
+    <h2 class="site-name">Qval</h2>
     <ul class="left">
       <div class="account">
         <a href="" class="login">Login</a>
