--- a/post.html
+++ b/post.html
@@ -657,6 +657,7 @@
         </div>
         <span class="action follow">Follow</span>
       </section>
+      <topics-container url="/topics/popular"></topics-container>
     </div>
   </main>
 
