--- a/post.html
+++ b/post.html
@@ -27,6 +27,7 @@
     import PostWrapper from "./js/wrappers/post.wrapper.js";
     import PersonWrapper from "./js/author.component.js";
     import StoryLoader from "./js/loaders/story.loader.js";
+    import PostLoader from "./js/loaders/post.loader.js";
     import PeopleLoader from "./js/loaders/people.loader.js";
     import TopicsLoader from "./js/loaders/topics.loader.js";
     import StoryFeed from "./js/feeds/stories.feed.js";
@@ -44,6 +45,7 @@
     customElements.define('post-wrapper', PostWrapper);
     customElements.define('person-wrapper', PersonWrapper);
     customElements.define('story-loader', StoryLoader);
+    customElements.define('post-loader', PostLoader);
     customElements.define('people-loader', PeopleLoader);
     customElements.define('topics-loader', TopicsLoader);
     customElements.define('stories-feed', StoryFeed);
