--- a/search.html
+++ b/search.html
@@ -502,18 +502,27 @@
   <main class="search">
     <section class="main">
       <form action="" method="get" class="search">
-        <input type="text" name="query" id="query">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="11.7666" cy="11.7667" r="8.98856" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-            stroke-linejoin="round" />
-          <path d="M18.0183 18.4853L21.5423 22.0001" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-            stroke-linejoin="round" />
-        </svg>
-        <button type="submit">Search</button>
+        <div class="contents">
+          <input type="text" name="query" id="query" placeholder="What's your query?">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="11.7666" cy="11.7667" r="8.98856" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path d="M18.0183 18.4853L21.5423 22.0001" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+          <button type="submit">Search</button>
+        </div>
       </form>
     </section>
 
-    <section class="side">Side</section>
+    <section class="side">
+      <div class="donate-card">
+        <h2 class="title">Support us</h2>
+        <p class="info">Subscribe to unlock new features and if eligible, receive a share of ads revenue.</p>
+        <a href="" class="link">Learn more</a>
+      </div>
+      <people-container url="/people/popular"></people-container>
+    </section>
   </main>
 </body>
 
