--- a/search.html
+++ b/search.html
@@ -521,7 +521,7 @@
         <p class="info">Subscribe to unlock new features and if eligible, receive a share of ads revenue.</p>
         <a href="" class="link">Learn more</a>
       </div>
-      <people-container url="/people/popular"></people-container>
+      <topics-container url="/topics/popular"></topics-container>
     </section>
   </main>
 </body>
