--- a/search.html
+++ b/search.html
@@ -517,7 +517,7 @@
         </div>
       </form>
       <div class="content-container">
-        <trending-container topic="Health Care" url="/trending/health-care" ></trending-container>
+        <trending-container topic="health care" url="/trending/health-care" ></trending-container>
       </div>
     </section>
 
