--- a/search.html
+++ b/search.html
@@ -517,7 +517,14 @@
         </div>
       </form>
       <div class="content-container">
-        <trending-container topic="health care" url="/trending/health-care" ></trending-container>
+        <trending-container topic-id="T0A03PBA" topic-name="health-care" topic="health care" stories="60k" url="/trending/health-care" ></trending-container>
+        <trending-container topic-id="T0AB3PB8"
+          topic-name="kendrick-lamar" topic="kendrick lamar" stories="603"
+          url="/trending/kendrick-lamar">
+        </trending-container>
+        <trending-container topic-id="T0A93PB8" topic-name="programming" topic="programming" stories="1.03k"
+          url="/trending/programming">
+        </trending-container>
       </div>
     </section>
 
