--- a/home.html
+++ b/home.html
@@ -17,35 +17,56 @@
     content="https://getopas.pythonanywhere.com/@femar/debian-vs-ubuntu-linux-which-one-should-you-choose-1-23">
 
   <script type="module">
-    import AppHome from "./js/apps/home.app.js";
-    import OpinionWrapper from "./js/opinion.component.js";
-    import StoryWrapper from "./js/story.component.js";
-		import PersonWrapper from "./js/author.component.js";
-		import StoryLoader from "./js/loaders/story.loader.js";
-		import PeopleLoader from "./js/loaders/people.loader.js";
-		import TopicsLoader from "./js/loaders/topics.loader.js";
-		import StoryFeed from "./js/feeds/stories.feed.js";
-		import PeopleContainer from "./js/containers/people.container.js";
-    import StoriesContainer from "./js/containers/stories-container.js"
-		import TopicsContainer from "./js/containers/topics.container.js";
-    import FormContainer from "./js/containers/form.container.js";
-    import AddContainer from "./js/containers/add.container.js";
+        import AppHome from "./js/apps/home.app.js";
+          import AppPost from "./js/apps/post.app.js";
+          import AppSearch from "./js/apps/search.app.js";
+
+          import OpinionWrapper from "./js/opinion.component.js";
+          import StoryWrapper from "./js/story.component.js";
+          import PostWrapper from "./js/wrappers/post.wrapper.js";
+          import PersonWrapper from "./js/author.component.js";
+
+          import StoryLoader from "./js/loaders/story.loader.js";
+          import PostLoader from "./js/loaders/post.loader.js";
+          import PeopleLoader from "./js/loaders/people.loader.js";
+          import TopicsLoader from "./js/loaders/topics.loader.js";
+
+          import StoryFeed from "./js/feeds/stories.feed.js";
+          import OpinionFeed from "./js/feeds/opinions.feeds.js";
+
+          import PeopleContainer from "./js/containers/people.container.js";
+          import StoriesContainer from "./js/containers/stories-container.js"
+          import TrendingContainer from "./js/containers/trending.container.js"
+          import TopicsContainer from "./js/containers/topics.container.js";
+          import FormContainer from "./js/containers/form.container.js";
+          import AddContainer from "./js/containers/add.container.js";
+
+          import DiscoverPeople from "./js/containers/people.discover.js"
 
 
-    customElements.define('app-home', AppHome);
+          customElements.define('app-home', AppHome);
+          customElements.define('app-post', AppPost);
+          customElements.define('app-search', AppSearch);
 
-    customElements.define('opinion-wrapper', OpinionWrapper);
-    customElements.define('story-wrapper', StoryWrapper);
-		customElements.define('person-wrapper', PersonWrapper);
-		customElements.define('story-loader', StoryLoader);
-		customElements.define('people-loader', PeopleLoader);
-		customElements.define('topics-loader', TopicsLoader);
-		customElements.define('stories-feed', StoryFeed);
-		customElements.define('people-container', PeopleContainer);
-    customElements.define('stories-container', StoriesContainer);
-		customElements.define('topics-container', TopicsContainer);
-    customElements.define('form-container', FormContainer);
-    customElements.define('add-container', AddContainer);
+          customElements.define('opinion-wrapper', OpinionWrapper);
+          customElements.define('story-wrapper', StoryWrapper);
+          customElements.define('post-wrapper', PostWrapper);
+          customElements.define('person-wrapper', PersonWrapper);
+          customElements.define('story-loader', StoryLoader);
+          customElements.define('post-loader', PostLoader);
+          customElements.define('people-loader', PeopleLoader);
+          customElements.define('topics-loader', TopicsLoader);
+          customElements.define('stories-feed', StoryFeed);
+          customElements.define('opinions-feed', OpinionFeed);
+
+          customElements.define('people-container', PeopleContainer);
+          customElements.define('stories-container', StoriesContainer);
+          customElements.define('trending-container', TrendingContainer);
+          customElements.define('topics-container', TopicsContainer);
+          customElements.define('form-container', FormContainer);
+          customElements.define('add-container', AddContainer);
+
+          customElements.define('discover-people', DiscoverPeople);
   </script>
 </head>
 
