--- a/profile.html
+++ b/profile.html
@@ -512,7 +512,42 @@
   </header>
   <main class="profile">
     <section class="main">
-      Main
+      <div class="head">
+        <div class="info">
+          <div class="data">
+            <div class="name">
+              <p>Fredrick Ochieng</p>
+              <span class="code">U0A89BA6</span>
+            </div>
+            <p class="bio">Student at The East African University</p>
+          </div>
+        </div>
+        <div class="image">
+          image
+        </div>
+      </div>
+      <div class="stats">
+        <a href="" class="stat followers">
+          <span class="no">23</span>
+          <span class="text">Followers</span>
+        </a>
+        <span class="sp">•</span>
+        <span class="stat stories">
+          <span class="no">603</span>
+          <span class="text">Stories</span>
+        </span>
+        <span class="sp">•</span>
+        <span class="stat join">
+          <span class="text">Joined</span>
+          <span class="no">3y ago</span>
+        </span>
+      </div>
+      <p class="about">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto sit pariatur ipsum! Aperiam, blanditiis! Nesciunt eius officia sed corrupti fuga rerum. Minus nam facilis qui, id quod enim impedit.
+      </p>
+      <div class="actions">
+        actions
+      </div>
     </section>
     <section class="side">
       Side
