--- a/profile.html
+++ b/profile.html
@@ -546,7 +546,9 @@
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto sit pariatur ipsum! Aperiam, blanditiis! Nesciunt eius officia sed corrupti fuga rerum. Minus nam facilis qui, id quod enim impedit.
       </p>
       <div class="actions">
-        actions
+        actions-top-hidden by default
+        <br>
+        actions-tab
       </div>
     </section>
     <section class="side">
