--- a/profile.html
+++ b/profile.html
@@ -513,39 +513,38 @@
   <main class="profile">
     <section class="main">
       <div class="head">
-        <div class="info">
-          <div class="data">
-            <div class="name">
-              <p>Fredrick Ochieng</p>
+        <div class="data">
+          <div class="name">
+            <span class="user">
               <span class="code">U0A89BA6</span>
-            </div>
-            <p class="bio">Student at The East African University</p>
+              <span class="joined">Mar 13, 2024</span>
+            </span>
+            <p>Fredrick Ochieng</p>
+          </div>
+          <div class="users">
+            <a href="" class="stat followers">
+              <span class="no">23</span>
+              <span class="text">Followers</span>
+            </a>
+            <span class="sp">•</span>
+            <a href="" class="stat followers">
+              <span class="no">203</span>
+              <span class="text">Following</span>
+            </a>
           </div>
         </div>
         <div class="image">
-          image
+          <img src="img/img.jpg" alt="Profile photo">
         </div>
       </div>
-      <div class="stats">
-        <a href="" class="stat followers">
-          <span class="no">23</span>
-          <span class="text">Followers</span>
-        </a>
-        <span class="sp">•</span>
+      <p class="about">
+        Student at East African University
+      </p>
+      <div class="actions">
         <span class="stat stories">
           <span class="no">603</span>
           <span class="text">Stories</span>
         </span>
-        <span class="sp">•</span>
-        <span class="stat join">
-          <span class="text">Joined</span>
-          <span class="no">3y ago</span>
-        </span>
-      </div>
-      <p class="about">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate iusto sit pariatur ipsum! Aperiam, blanditiis! Nesciunt eius officia sed corrupti fuga rerum. Minus nam facilis qui, id quod enim impedit.
-      </p>
-      <div class="actions">
         actions-top-hidden by default
         <br>
         actions-tab
