--- a/profile.html
+++ b/profile.html
@@ -541,13 +541,28 @@
         Student at East African University
       </p>
       <div class="actions">
-        <span class="stat stories">
-          <span class="no">603</span>
-          <span class="text">Stories</span>
-        </span>
-        actions-top-hidden by default
-        <br>
-        actions-tab
+        <div class="author">
+          <span class="code">U0A89BA6</span>
+          <span class="sp">•</span>
+          <span class="stories">
+            <span class="no">603</span>
+            <span class="text">Stories</span>
+          </span>
+        </div>
+        <ul id="tab" class="tab">
+          <li data-element="stories" class="tab-item details active">
+            <span class="text">Stories</span>
+            <span class="line"></span>
+          </li>
+          <li data-element="opinions" class="tab-item opinions">
+            <span class="text">Opinions</span>
+            <span class="line"></span>
+          </li>
+          <li data-element="people" class="tab-item related">
+            <span class="text">People</span>
+            <span class="line"></span>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="side">
