--- a/profile.html
+++ b/profile.html
@@ -565,7 +565,8 @@
         </ul>
       </div>
       <div class="content-container">
-        fffff
+        <!-- <stories-feed stories="all" url="/stories/feed"></stories-feed> -->
+        <opinions-feed opinions="all" url="/opinions"></opinions-feed>
       </div>
     </section>
     <section class="side">
